# brdrockagentcorecodealong1

./: .gitignore  CreateVctorStore.py  README.md  main.py  pyproject.toml
AgentCoreCodeInt/: dataAgentCore.py
AgentCoreOauth/: BearerToken.py  CogNitoSetup.py
AgentCoreOauth/agentcore-auth/: dataAgentCore.py
AgentCoreRuntime/: runtestclieny.py
AgentMemory/: dataAgentCore.py  requirements.txt  sessionMemory.py
OpenAiAgents/: DataAgentSDKStandalone.py
